[gd_scene load_steps=3 format=3 uid="uid://c46i2nvjmhlvy"]

[ext_resource type="Script" path="res://menu_panel.gd" id="1_y0bgr"]
[ext_resource type="PackedScene" uid="uid://d24bjvretr1u5" path="res://retryButton.tscn" id="2_dwpha"]

[node name="menuPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("1_y0bgr")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 278.0
offset_bottom = 309.0
mouse_filter = 1

[node name="resume" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 82.0
offset_top = 115.0
offset_right = 194.0
offset_bottom = 163.0
text = "Resume
"

[node name="mainMenu" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 80.0
offset_top = 232.0
offset_right = 192.0
offset_bottom = 281.0
text = "Main Menu
"

[node name="retryButton" parent="Panel" instance=ExtResource("2_dwpha")]
layout_mode = 0
offset_left = 80.0
offset_top = 176.0
offset_right = 192.0
offset_bottom = 224.0

[connection signal="pressed" from="Panel/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/mainMenu" to="." method="_on_menu_pressed"]
